# concourse-gitea-package

./: .dockerignore  Cargo.toml  Dockerfile  README.md
ci/: vars.yaml
scripts/: check  in  out
src/: client.rs  endpoints.rs  foo  main.rs  models.rs  params.rs
src/cli/: check.rs  get.rs  mod.rs  out.rs
